@@ -1,3 +1,15 @@
+2017-08-18  David Malcolm  <dmalcolm@redhat.com>
+
+	* jit-recording.c (class gcc::jit::reproducer): Rename field
+	"m_identifiers" to "m_map_memento_to_identifier".  Add field
+	"m_set_identifiers" and struct hash_traits for it.
+	(gcc::jit::reproducer::reproducer): Update for above.
+	(convert_to_identifier): New function.
+	(gcc::jit::reproducer::ensure_identifier_is_unique): New method.
+	(gcc::jit::reproducer::make_identifier): Avoid appending the %p
+	unless necessary for uniqueness.  Update for field renaming.
+	(gcc::jit::reproducer::get_identifier): Update for field renaming.
+
 2017-08-09  David Malcolm  <dmalcolm@redhat.com>
 
 	* docs/cp/topics/types.rst (Vector types): New section.
